--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "student",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": ".",
   "dependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
